--- a/html/calculator.html
+++ b/html/calculator.html
@@ -12,21 +12,20 @@
 
 <body>
 
-
-
-<div class="container">
+<div class="tip navbar" >
 
 
     <p>
       Some tips: EC clears latest entry.Click on AC to reset calculator.
 	  
     </p>
-	
 	<button id="logout">Log out</button>
 	
+ </div>	
 	
 	
-    <div class="calculator">
+	
+    <div class="calculator main-body">
       <div class="calculator__display">0</div>
 
       <div class="calculator__keys">
@@ -49,7 +48,35 @@
         <button class="key--equal" data-action="calculate">=</button>
       </div>
     </div>
-  </div>
+ 
+  
+<div class="footer">
+
+<div class="personalData">
+
+<div class="sites">
+<img src="../assets/facebook.svg">
+<a href="https://www.facebook.com/dimitris.kazantzidis.3" target="_blank">Facebook</a>
+</div>
+
+<div class="sites">
+<img src="../assets/github.svg">
+<a href="https://github.com/kazantzidhsdimitris" target="_blank">GitHub</a>
+</div>
+
+<div class="sites">
+<img src="../assets/linkedin.svg">
+<a href="https://www.linkedin.com/in/dimitris-kazantzidis-52a558146/" target="_blank">LindedIn </a>
+</div>
+
+<div class="sites">
+<img src="../assets/mail.svg">
+<a href="mailto:kazantzidhsdimitris@gmail.com" target="_blank">Contact me on</a>
+</div>
+
+
+</div>
+ 
   
  </body>
 <script src="../js/calcJS.js"></script>
